add award video

--- a/index.html
+++ b/index.html
@@ -356,7 +356,11 @@
     </div>
 </div>
 <div class="row">
-
+    <div class="col-md-2">
+        <br>
+        <br>
+        <a href="https://www.facebook.com/AwardVideoService" target="_blank"><img src="/user_assets/images/sponsors/AwardVideo.png" class="center-block img-responsive" alt=""/></a>
+    </div>
 </div>
 
 <div class="row">
