update "current" logo

--- a/index.html
+++ b/index.html
@@ -285,10 +285,7 @@
     </div>
     <div class="col-md-3">
         <br>
-        <br>
-        <br>
-        <br>
-        <a href="http://www.currentzionsville.com/" target="_blank"><img src="/user_assets/images/sponsors/currentlogo.png" class="center-block img-responsive" alt=""/></a>
+        <a href="http://www.currentzionsville.com/" target="_blank"><img src="/user_assets/images/sponsors/current_2014_logo.jpg" class="center-block img-responsive" alt=""/></a>
         <br>
     </div>
 </div>
