--- a/index.html
+++ b/index.html
@@ -353,15 +353,22 @@
 </div>
 
 <div class="row">
-<br>
-  <hr>
-  <br>
-  <br>
-  <!-- <div align="center">
-    <h3><em><a href="http://boonecvb.com/"  target="_blank">A special thanks to the Boone County Convention & Visitors Bureau</a></em></h3>
-  </div> -->
+    <div class="col-md-2">
+        <br>
+        <br>
+        <a href="" target="_blank"><img src="/user_assets/images/sponsors/clearview.jpg" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-2">
+        <br>
+        <br>
+        <a href="http://www.dpictimaging.com/" target="_blank"><img src="/user_assets/images/sponsors/dpict.jpg" class="center-block img-responsive" alt=""/></a>
+        <br>
+    </div>
 </div>
+
+
 <br>
+<hr>
 <hr>
 <div class="row">
 	<div class="col-md-6">
