--- a/index.html
+++ b/index.html
@@ -254,13 +254,7 @@
 <hr>
 
 <div class="row">
-    <div class="col-md-3">
-        <br>
-        <br>
-        <br>
-        <a href="http://boonecvb.com/" target="_blank"><img src="/user_assets/images/sponsors/booncounty.png" class="center-block img-responsive" alt=""/></a>
-    </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-md-offset-2">
         <a href="http://www.midwestestatebuyers.com/" target="_blank"><img src="/user_assets/images/sponsors/midwest_estate.jpg" class="center-block img-responsive" alt=""/></a>
         <br>
     </div>
@@ -268,17 +262,19 @@
         <br>
         <br>
         <br>
-        <a href="http://luxpremier.com/" target="_blank"><img src="/user_assets/images/sponsors/logolux.png" class="center-block img-responsive" alt=""/></a>
-    </div>
-    <div class="col-md-3">
-        <br>
-        <br>
-        <br>
         <a href="http://www.pfmautomotive.com/locations/mode/4/4900-w-106th-street-zionsville-in-46077.aspx" target="_blank"><img src="/user_assets/images/sponsors/pfm-tire-logo.jpg" class="center-block img-responsive" alt=""/></a>
     </div>
+    <div class="col-md-4">
+        <br>
+        <br>
+        <br>
+        <a href="http://boonecvb.com/" target="_blank"><img src="/user_assets/images/sponsors/booncounty.png" class="center-block img-responsive" alt=""/></a>
+    </div>
+
+
 </div>
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 col-md-offset-2">
         <br>
         <a href="http://www.capturemedia.com/" target="_blank"><img src="/user_assets/images/sponsors/capture_news.jpg" class="center-block img-responsive" alt=""/></a>
         <br>
@@ -288,13 +284,17 @@
         <a href="http://www.currentzionsville.com/" target="_blank"><img src="/user_assets/images/sponsors/current_2014_logo.jpg" class="center-block img-responsive" alt=""/></a>
         <br>
     </div>
+    <div class="col-md-3">
+        <br>
+        <a href="http://luxpremier.com/" target="_blank"><img src="/user_assets/images/sponsors/logolux.png" class="center-block img-responsive" alt=""/></a>
+    </div>
 </div>
 <h3> Gold Sponsors </h3>
 <hr>
 <hr>
 
 <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-2 col-md-offset-3">
         <br>
         <br>
         <a href="http://ingaspopcorn.com/" target="_blank"><img src="/user_assets/images/sponsors/ingas_popcorn3.jpg" class="center-block img-responsive" alt=""/></a>
@@ -326,6 +326,7 @@
     <div class="col-md-2">
         <br>
         <br>
+        <br>
         <a href="http://awrswheelrepair.com/indianapolis/" target="_blank"><img src="/user_assets/images/sponsors/alloy_wheel_repair.jpg" class="center-block img-responsive" alt=""/></a>
         <br>
     </div>
@@ -355,17 +356,48 @@
 <div class="row">
     <div class="col-md-2">
         <br>
+        <a href="http://giprinting.net/" target="_blank"><img src="/user_assets/images/sponsors/goodimpressions.jpg" class="center-block img-responsive" alt=""/></a>
+        <br>
+    </div>
+    <div class="col-md-2">
+        <br>
+        <br>
         <br>
         <a href="" target="_blank"><img src="/user_assets/images/sponsors/clearview.jpg" class="center-block img-responsive" alt=""/></a>
     </div>
     <div class="col-md-2">
         <br>
         <br>
+        <br>
         <a href="http://www.dpictimaging.com/" target="_blank"><img src="/user_assets/images/sponsors/dpict.jpg" class="center-block img-responsive" alt=""/></a>
+        <br>
+    </div>
+    <div class="col-md-2">
+        <br>
+        <a href="http://www.bubsburgersandicecream.com/" target="_blank"><img src="/user_assets/images/sponsors/BubsBurgers.png" class="center-block img-responsive" alt=""/></a>
+        <br>
+    </div>
+    <div class="col-md-2">
+        <br>
+        <a href="https://www.facebook.com/pages/The-Friendly-Tavern/185313448158462" target="_blank"><img src="/user_assets/images/sponsors/thefriendly.jpg" class="center-block img-responsive" alt=""/></a>
+        <br>
+    </div>
+    <div class="col-md-2">
+        <br>
+        <a href="http://www.greekspizzeria.com/" target="_blank"><img src="/user_assets/images/sponsors/greekspizzeria.png" class="center-block img-responsive" alt=""/></a>
         <br>
     </div>
 </div>
 
+<div class="row">
+    <div class="col-md-2">
+        <br>
+        <a href="http://cvartandframe.com/" target="_blank"><img src="/user_assets/images/sponsors/artandframe.png" class="center-block img-responsive" alt=""/></a>
+        <br>
+    </div>
+
+
+</div>
 
 <br>
 <hr>
