--- a/faq.html
+++ b/faq.html
@@ -95,34 +95,19 @@
     <div class="container">
       
 <h3 id="q-a-cruzionsville">Q &amp; A — CruZionsville</h3>
-<hr>
-<p><strong>What is CruZionsville?</strong></p>
-<p><em>It is a gathering of Porsche owners who enjoy getting together and sharing their cars! The event is in historic Zionsville IN just northwest of Indianapolis by 20 minutes. This event is held &quot;on the brick street&quot; each June on the Saturday immediately prior to Father&#39;s Day! This year we are expecting 100 Porsche cars on June 14th.</em></p>
-<p><em>The event is free to the public and Porsche owners pay only $35 per car or $55 dollars for 2 cars (earlybird special till April 30th). CruZionsville is raising money for Alzheimer’s.</em></p>
-<p><strong>How much do you hope to raise for Alzheimer&#39;s?</strong></p>
-<p><em>Car registrations and sponsorship fees are going to support the <a href="http://www.alz.org/indiana/">Alzheimer&#39;s Association - Greater Indiana Chapter</a>. Our goal this year is to raise $25,000.</em></p>
-<p><strong>How about the weather?</strong></p>
-<p><em>It is an outdoor event and it is rain or shine!</em></p>
-<p><strong>What are some of the special activities?</strong></p>
-<p><em>Check out our <a href="http://www.cruzionsville.com/faq">agenda</a> for all of the exciting Special Activities we have planned for Saturday, June 15th as part of CruZionsville.</em></p>
-<p><strong>What can I do in Zionsville?</strong></p>
-<ul>
-<li><em>Visit the <a href="http://sullivanmunce.org">Sullivan Munce Museum</a> providing materials for Kid’s painting program</em></li>
-<li><em>Visit The Meadows who is hosting a breakfast for car owners and guests</em></li>
-<li><em><a href="http://sullivanmunce.org">Sullivan Munce</a> is hosting Plein Air painting with judging announced from Midwest Estate Buyers Entertainment Stage located in town lot.</em></li>
-<li><em>Visit <a href="http://www.hopwoodcellars.com/">Hopwood Cellars</a> who has partnered to create a CruZionsville Limited Edition Wine Label</em></li>
-<li><em>Visit <a href="http://nikkiblaine.com/">Nikki Blaine Couture</a> who is presenting the Fashion Show on Main Street</em></li>
-<li><em>Visit <a href="http://www.robertgoodmanjewelers.com/">Robert Goodman Jewelers</a> who has provided a beautiful watch</em></li>
-<li><em><a href="http://www.noahgrants.com/">Noah Grants</a> is helping host the late afternoon reception at their location for car owners and sponsors</em></li>
-<li><em>Visit <a href="http://www.indygalleries.com/">Corner Vise Gallery</a> who has framed a CruZionsville poster</em></li>
-<li><em>Visit<a href="http://www.cobblestonegrill.com/"> Cobblestone Grill </a>and <a href="http://patrickskitchen.com/">Patrick’s Kitchen</a> who are providing a donation for each draft beer sold</em></li>
-<li><em>Visit <a href="http://patrickskitchen.com/">Patrick’s</a> &quot;The Brick Street Inn&quot; who is hosting the Official Headquarters of CruZionsville</em></li>
-<li><em>Visit <a href="http://ingaspopcorn.com/">Inga’s Popcorn</a> who is a CruZionsville sponsor</em></li>
-<li><em>Visit <a href="http://www.confectioneiress.com/">Confectioneiress</a> who is a CruZionsville Sponsors</em></li>
-<li><em>Come to the <a href="http://www.midwestestatebuyers.com">Midwest Estate Buyers</a> Entertainment Stage for live music and don’t forget to stop in their store right across the street!</em></li>
-</ul>
-<p><strong>What are the times?</strong></p>
-<p><em>The cars will arrive on the brick street by police escort starting at 10:00 am with the official start time of 10:30 am. The program will kick off with the singing of the National Anthem followed by 100 balloons being launched! Come and enjoy the day of activities till 3:00 pm. </em></p>
+<p><strong>What is CruZionsville?</strong><br>It is an <a href="http://www.cruzionsville.com/faq">event</a> in which Porsche owners from five states gather together to see rare and unusual Porsche cars as well as the newest models. The proceeds from this event go to the Alzheimer’s Organization of Central Indiana.</p>
+<p><strong>How many years has this event taken place?</strong><br>This is the fifth year. The crowds keep getting larger and larger and we continue to look for new ways to keep it exciting. We have some surprises for you again this year as well.</p>
+<p><strong>How many cars will there be?</strong><br>We expect 125 Porsche cars on the brick street in downtown Zionsville.  We also will be displaying some beautiful motorcycles from Ducati!</p>
+<p><strong>What kind of entertainment will be at the event?</strong><br>There will be a DJ and live entertainment, so look for the listing. There will be a People’s Choice judging with the public helping decide the most beautiful of the cars on display.</p>
+<p><strong>Is there something for kids to do at the event?</strong><br>Yes! The kids’ area is open from 10:45 a.m. to 1:30 p.m. It is located next to the Brick Street Inn. Painting canvas and materials will be provided by the Sullivan Muncie Cultural Center. Each child will have an opportunity to “give back” a donation to the Alzheimer&#39;s Organization of Central Indiana for having fun at CruZionsville.</p>
+<p><strong>Tell us about the Fashion Show!</strong><br>Beautiful clothes will be shown by our local dress shops along Main Street. This outdoor fashion show will begin promptly at 1 p.m. You won’t want to miss being on the brick street to catch up on what clothing trends are in for spring and summer.</p>
+<p><strong>Are there places to eat during CruZionsville?</strong><br>Zionsville offers a wide range of wonderful dining options — from salads and sandwiches to sushi — so bring the whole family for a day in Zionsville. There is so much to see and do.</p>
+<p><strong>Why did the Porsche Car Club of Indiana choose to donate its proceeds to the nonprofit Alzheimer’s Association?</strong><br>Alzheimer’s is a debilitating disease with no cure that has adversely affected so many families. We wanted to create more exposure for this worthwhile cause while at the same time providing resources to help our community.</p>
+<p><strong>Can anyone make a donation?</strong><br>Absolutely! There is a link at www.cruzionsville.com to the Alzheimer’s Association’s website. Our goal is to raise $15,000 between the sponsorships, car registrations, and our other activities. We have specially numbered CruZionsville bottles of wine for sale. You can make a donation to enter into a drawing for a chance to win a Man&#39;s Watch (thanks to Goodman’s Jewelers). We have special Porsche 911 custom coffee mugs filled with ground coffee, popcorn, or chocolate for a donation of just $15. Don’t forget our beautiful custom-designed polos and T-shirts as well as Inga’s special CruZionsville Popcorn, created just for this event!</p>
+<p>Come and enjoy the fun.</p>
+<p>Motor On!</p>
+<p>Stephen Tarr, Event Chair</p>
+<h3 id="agenda">Agenda</h3>
 <table class="table table-bordered table-striped table-hover">
 <thead>
 <tr>
@@ -133,7 +118,7 @@
 <tbody>
 <tr>
 <td style="text-align:right">8:30 - 10 am</td>
-<td>Cars are staged at The Meadows - 675 S. Ford Road, Zionsville</td>
+<td>Cars are staged at Boone Village Shopping Center, Zionsville</td>
 </tr>
 <tr>
 <td style="text-align:right">10 - 10:30 am</td>
@@ -148,28 +133,20 @@
 <td>Porsche cars parked on Main Street</td>
 </tr>
 <tr>
-<td style="text-align:right">10:45 am - 12:30 pm</td>
-<td>Special Kids program</td>
-</tr>
-<tr>
-<td style="text-align:right">10:45 am - 12:30 pm</td>
-<td>Sullivan Munce Garden Tour</td>
+<td style="text-align:right">10:45 am - 1:30 pm</td>
+<td>Kids program</td>
 </tr>
 <tr>
 <td style="text-align:right">11:45 am - 1 pm</td>
 <td>Celebrity, Youth and Porsche Club Judging</td>
 </tr>
 <tr>
-<td style="text-align:right">1 - 1:30 pm</td>
+<td style="text-align:right">1 - 1:20 pm</td>
 <td>Style Show on Main Street</td>
 </tr>
 <tr>
 <td style="text-align:right">2 pm</td>
 <td>People&#39;s Choice Judging ends</td>
-</tr>
-<tr>
-<td style="text-align:right">2:30 - 2:45 pm</td>
-<td>Sullivan Munce Museum Painting Awards</td>
 </tr>
 <tr>
 <td style="text-align:right">2:45 - 3 pm</td>
@@ -180,20 +157,13 @@
 <td>CruZionsville ends on Main Street</td>
 </tr>
 <tr>
-<td style="text-align:right">3:15 - 6 pm</td>
-<td>CruZionsville Reception at the (venue TBD)</td>
+<td style="text-align:right">3:30 - 4:45 pm</td>
+<td>Private reception for Porsche attendee’s and Sponsors at Ciao by Villaggio Restaurant</td>
 </tr>
 </tbody>
 </table>
-<p><strong>Will there be judging?</strong></p>
-<p><em>Yes -- it is a shine and show judging event! We have a list of outstanding celebrity judges including Miss Indiana, Ray Cortopassi from Fox News, Lauren Lowrey from WISH TV as well as Kids Judging and of course the People Choice Award for the car that everyone likes the best!</em></p>
-<p><strong>Will I see different years and models of Porsche cars?</strong></p>
-<p><em>Most definitely! We are expecting all kinds of Porsche cars including the 356, 911, Cayman, as well as the Boxster model. The Porsche cars date from the 1950&#39;s to the latest 2014 models!</em></p>
-<p><strong>What is Alzheimer&#39;s disease?</strong></p>
-<p>Alzheimer&#39;s disease destroys brain cells and affects a person&#39;s memory, ability to learn, make judgments, communicate, and carry out basic daily activities. Alzheimer’s disease is not a normal part of the aging process. As the 6th leading cause of death in the United States, Alzheimer&#39;s disease is a progressive, fatal disease and currently has no cure. More than 5 million Americans are living with Alzheimer’s disease, including an estimated 100,000 Hoosiers.</p>
-<p><strong>What is the Alzheimer&#39;s Association?</strong></p>
-<p>The Alzheimer’s Association is the world’s leading voluntary health organization in Alzheimer&#39;s care, support and research. Our mission is to eliminate Alzheimer’s disease through the advancement of research, to provide and enhance care and support for all affected, and to reduce the risk of dementia through the promotion of brain health. Our vision is a world without Alzheimer’s®. Visit <a href="http://www.alz.org">www.alz.org</a>/indiana or call 800.272.3900.</p>
-<p>* <strong>Event will take place in the town lot at the corner of Main and Hawthorn. Note: times are subject to change.</strong></p>
+<p> </br></p>
+<p>* <strong>Event will take place in the town lot at the corner of Main (the town lot) and Pine. Note: times are subject to change.</strong></p>
 
 
     </div>
