--- a/index.html
+++ b/index.html
@@ -279,18 +279,18 @@
 <hr>
 
 <div class="row">
-    <div class="col-md-2 col-md-offset-3">
+    <div class="col-md-3 col-md-offset-2">
         <br>
         <br>
         <a href="http://ingaspopcorn.com/" target="_blank"><img src="/user_assets/images/sponsors/ingas_popcorn3.jpg" class="center-block img-responsive" alt=""/></a>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-3">
         <br>
         <br>
         <a href="http://www.hopwoodcellars.com/" target="_blank"><img src="/user_assets/images/sponsors/hopwood3.jpg" class="center-block img-responsive" alt=""/></a>
         <br>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-3">
         <br>
         <br>
         <br>
@@ -299,17 +299,17 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-2 col-md-offset-3">
+    <div class="col-md-3 col-md-offset-2">
         <br>
         <a href="http://www.capturemedia.com/" target="_blank"><img src="/user_assets/images/sponsors/capture_news.jpg" class="center-block img-responsive" alt=""/></a>
         <br>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-3">
         <br>
         <a href="http://www.currentzionsville.com/" target="_blank"><img src="/user_assets/images/sponsors/current_2014_logo.jpg" class="center-block img-responsive" alt=""/></a>
         <br>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-3">
         <br>
         <a href="http://luxpremier.com/" target="_blank"><img src="/user_assets/images/sponsors/logolux.png" class="center-block img-responsive" alt=""/></a>
     </div>
@@ -364,7 +364,7 @@
         <br>
         <br>
         <br>
-        <a href="" target="_blank"><img src="/user_assets/images/sponsors/clearview.jpg" class="center-block img-responsive" alt=""/></a>
+        <a href="https://www.facebook.com/clearviewproducts" target="_blank"><img src="/user_assets/images/sponsors/clearview.jpg" class="center-block img-responsive" alt=""/></a>
     </div>
     <div class="col-md-2">
         <br>
