--- a/accommodations.html
+++ b/accommodations.html
@@ -95,8 +95,13 @@
     <div class="container">
       
 <h3 id="accommodations">Accommodations</h3>
+<p><br></p>
+<hr>
 <p><a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/INDZVHX-CPG-20150612/index.jhtml"><img src="user_assets/images/hampton_inn_logo.gif"></a></p>
 <p>A <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/INDZVHX-CPG-20150612/index.jhtml">block of rooms</a> have been reserved for June 12, 2015 - June 13, 2015. The special room rate will be available until June 9th or until the group block is sold-out, whichever comes first.  Just ask them for the <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/INDZVHX-CPG-20150612/index.jhtml">CruZionsville rooms</a>.</p>
+<hr>
+<p><a href="http://www.brickstreetinn.com"><img src="user_assets/images/sponsors/bsi-logo.png"></a></p>
+<p>A <a href="http://www.brickstreetinn.com">block of rooms</a> have been reserved for June 12, 2015 - June 13, 2015. The special room rate will be available until June 5th or until the group block is sold-out, whichever comes first.  Just ask them for the <a href="http://www.brickstreetinn.com">CruZionsville rooms</a>.</p>
 
 
     </div>
