--- a/faq.html
+++ b/faq.html
@@ -182,14 +182,14 @@
 <td><img src="/user_assets/images/faq/917image.jpg" alt="917 Porsche Reprint"></td>
 </tr>
 <tr>
+<td style="text-align:right"><strong>CruZionsville 2015 Polo Shirt</strong></td>
+<td>$45</td>
+<td><img src="/user_assets/images/faq/15polo4.jpeg" alt="CruZionsville 2015 Polo Shirt"></td>
+</tr>
+<tr>
 <td style="text-align:right"><strong>Porsche 912 50 years</strong>: book written by Randy Leffingwell</td>
 <td>$50</td>
 <td><img src="/user_assets/images/faq/porsche50yearsbook.jpg" alt="Porsche 912 50 years: Book"></td>
-</tr>
-<tr>
-<td style="text-align:right"><strong>CruZionsville 2015 Polo Shirt</strong></td>
-<td>$45</td>
-<td><img src="/user_assets/images/faq/15polo4.jpg" alt="CruZionsville 2015 Polo Shirt"></td>
 </tr>
 </tbody>
 </table>
