Add Fox59 video

--- a/index.html
+++ b/index.html
@@ -424,6 +424,11 @@
             <p><a href="https://vimeo.com/118157048">CruZionsville 2014</a> from <a href="AwardVideoService@comcast.net">Award Video Service</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </div>
         <p class="text-center">Thanks to Award Video Service for allowing us to use this video!</p>
+        <hr>
+        <div class="flex-video widescreen">
+            <script height="433px" width="770px" src="http://player.ooyala.com/iframe.js#pbid=4839d4b491844b6da3d47f354f217ce5&ec=pxd3U5dTrPPIZihPm99qB36x5z9w32VT"></script>
+        </div>
+        <p class="text-center">CruZionsville on FOX 59</p>
     </div>
 </div>
 
