add cz magazine

--- a/index.html
+++ b/index.html
@@ -416,6 +416,12 @@
 <p><a href="http://www.facebook.com/CruZionsville" target="_blank"><img src="/user_assets/images/buttons/facebook.jpg" class="" alt="Facebook Image"/></a></p>
 
 		</div>
+        <br/>
+        <div>
+            <a href="http://www.capturemedia.com/2015/cruzionsville0615/index.html" target="_blank"><img src="/user_assets/images/magazine/current_cover.jpg" class="center-block img-responsive" alt=""/></a>
+            <h3 class="text-center">2015 CruZionsville Magazine</h3>
+        </div>
+        <br/>
     </div>
     <div class="col-md-6">
         <br>
