--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -130,6 +130,20 @@ $(document).ready(function () {
 </script>
 
 
+<br>
+<br>
+<h1>Videos</h1>
+<hr>
+<div class="row">
+    <div class="col-md-6">
+        <br>
+        <div class="flex-video widescreen">
+            <iframe src="//player.vimeo.com/video/118157048?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <p><a href="https://vimeo.com/118157048">CruZionsville 2014</a> from <a href="AwardVideoService@comcast.net">Award Video Service</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+        </div>
+        <p class="text-center">Thanks to Award Video Service for allowing us to use this video!</p>
+    </div>
+</div>
 
 
     </div>
