--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
 <br>
 
 <div class="row">
-	<div class="col-md-12">
+	<div class="col-md-6">
 		<h1 id="join-us-for-cruzionsville-2015-">Join Us for CruZionsville 2015!</h1>
 <hr>
-<h3 id="-save-the-date-cruzionsville-2015-will-be-on-saturday-june-13-2015-cars-parking-on-main-st-at-10-am-till-3pm-we-will-start-taking-registrations-in-late-january-"><em>Save the date! CruZionsville 2015 will be on Saturday, June 13, 2015. Cars parking on Main St at 10 am till 3pm. We will start taking registrations in late January.</em></h3>
+<h3 id="-coming-up-soon-cruzionsville-2015-will-be-on-saturday-june-13-2015-cars-parking-on-main-st-at-10-am-till-3pm-we-will-start-taking-registrations-in-late-january-"><em> <strong>Coming up soon!</strong> CruZionsville 2015 will be on Saturday, June 13, 2015. Cars parking on Main St at 10 am till 3pm. We will start taking registrations in late January.</em></h3>
 <hr>
 <p>Join Club members, friends and volunteers of the <a href="http://cirpca.org/">Central Indiana Region Porsche Club of America</a>. It will be held on the “Brick Street&quot; in downtown Zionsville, Indiana, Saturday, June 13th. We anticipate having over 125 Porsche cars at our 5th annual event which has been growing over 20% each year. Bring your car, see old friends and meet new ones, listen to music, attend free seminars, shop and don’t miss your chance to bring home a CruZionsville trophy! We have added more great Sponsors this year and these are even more things to see and do. Proceeds go to the Alzheimer&#39;s Organization of Indiana.</p>
 <p>Early bird registration is only $35 per car until May 20th. We will have VIP parking and early bird registration this year at $100 with all proceeds going to the <a href="http://www.alz.org/indiana/">Alzheimer&#39;s Association Greater Indiana</a>. Last year we raised $15,000 and our goal for the 2015 CruZionsville event is to raise $18,000</p>
@@ -226,6 +226,33 @@
 <p><em>2015 CruZionsville Event Chair</em></p>
 
 	</div>
+    <div class="col-md-6">
+        <h1 class="text-center">CruZionsville on FOX 59</h1>
+        <hr>
+        <div class="flex-video widescreen">
+            <script height="433px" width="770px" src="http://player.ooyala.com/iframe.js#pbid=4839d4b491844b6da3d47f354f217ce5&ec=pxd3U5dTrPPIZihPm99qB36x5z9w32VT"></script>
+        </div>
+        <div class="row">
+        	<div class="col-md-6">
+                <div class="text-center center-block">
+              <h3 id="registration">Registration</h3>
+<p><a href="http://www.cruzionsville.com/registration" target="_blank"><img src="/user_assets/images/buttons/registration.jpg" class="" alt="Registration Image"/></a></p>
+<h3 id="make-a-difference">Make A Difference</h3>
+<p><a href="https://act.alz.org/site/Donation2;jsessionid=021B9431F2CD2388A148BF2341049E88.app201a?idb=1893236060&df_id=27162&FR_ID=7482&PROXY_ID=271472&27162.donation=form1&PROXY_TYPE=22" target="_blank"><img src="/user_assets/images/buttons/donate.jpg" class="" alt="Donation Image"/></a></p>
+<p>Donate now!</p>
+<h3 id="find-us-on-facebook">Find Us On Facebook</h3>
+<p><a href="http://www.facebook.com/CruZionsville" target="_blank"><img src="/user_assets/images/buttons/facebook.jpg" class="" alt="Facebook Image"/></a></p>
+
+                </div>
+            </div>
+            <div class="col-md-6">
+                <br>
+                <br>
+                <a href="http://www.capturemedia.com/2015/cruzionsville0615/index.html" target="_blank"><img src="/user_assets/images/magazine/current_cover.jpg" class="center-block img-responsive" alt=""/></a>
+                <h3 class="text-center">2015 CruZionsville Magazine</h3>
+            </div>
+        </div>
+    </div>
 </div>
 
 
@@ -394,52 +421,21 @@
 <div class="row">
     <div class="col-md-2">
         <br>
+        <br>
+        <br>
         <a href="http://cvartandframe.com/" target="_blank"><img src="/user_assets/images/sponsors/artandframe.png" class="center-block img-responsive" alt=""/></a>
         <br>
     </div>
-
+    <div class="col-md-2">
+        <br>
+        <a href="https://www.facebook.com/CiaobyVillaggio/info?tab=overview" target="_blank"><img src="/user_assets/images/sponsors/villagio.jpeg" class="center-block img-responsive" alt=""/></a>
+        <br>
+    </div>
 
 </div>
 
 <br>
 <hr>
-<hr>
-<div class="row">
-	<div class="col-md-6">
-		<div class="text-center center-block">
-      <h3 id="registration">Registration</h3>
-<p><a href="http://www.cruzionsville.com/registration" target="_blank"><img src="/user_assets/images/buttons/registration.jpg" class="" alt="Registration Image"/></a></p>
-<h3 id="make-a-difference">Make A Difference</h3>
-<p><a href="https://act.alz.org/site/Donation2;jsessionid=021B9431F2CD2388A148BF2341049E88.app201a?idb=1893236060&df_id=27162&FR_ID=7482&PROXY_ID=271472&27162.donation=form1&PROXY_TYPE=22" target="_blank"><img src="/user_assets/images/buttons/donate.jpg" class="" alt="Donation Image"/></a></p>
-<p>Donate now!</p>
-<h3 id="find-us-on-facebook">Find Us On Facebook</h3>
-<p><a href="http://www.facebook.com/CruZionsville" target="_blank"><img src="/user_assets/images/buttons/facebook.jpg" class="" alt="Facebook Image"/></a></p>
-
-		</div>
-        <br/>
-        <div>
-            <a href="http://www.capturemedia.com/2015/cruzionsville0615/index.html" target="_blank"><img src="/user_assets/images/magazine/current_cover.jpg" class="center-block img-responsive" alt=""/></a>
-            <h3 class="text-center">2015 CruZionsville Magazine</h3>
-        </div>
-        <br/>
-    </div>
-    <div class="col-md-6">
-        <br>
-        <div class="flex-video widescreen">
-            <iframe src="//player.vimeo.com/video/118157048?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            <p><a href="https://vimeo.com/118157048">CruZionsville 2014</a> from <a href="AwardVideoService@comcast.net">Award Video Service</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-        </div>
-        <p class="text-center">Thanks to Award Video Service for allowing us to use this video!</p>
-        <hr>
-        <div class="flex-video widescreen">
-            <script height="433px" width="770px" src="http://player.ooyala.com/iframe.js#pbid=4839d4b491844b6da3d47f354f217ce5&ec=pxd3U5dTrPPIZihPm99qB36x5z9w32VT"></script>
-        </div>
-        <p class="text-center">CruZionsville on FOX 59</p>
-    </div>
-</div>
-
-<hr>
-
 
 
 <div class="row">
