--- a/index.html
+++ b/index.html
@@ -131,39 +131,39 @@
   <div class="carousel-inner">
   
     <div class="item active">
-      <img src="/user_assets/images/banner/Collage_2014.jpg" width="100%" alt="">
+      <img src="/user_assets/images/banner 2014/collage-full.jpg" width="100%" alt="">
     </div>
   
     <div class="item ">
-      <img src="/user_assets/images/banner/IMG_163_2014.jpg" width="100%" alt="">
+      <img src="/user_assets/images/banner 2014/winners/IMG_2074.jpg" width="100%" alt="">
     </div>
   
     <div class="item ">
-      <img src="/user_assets/images/banner/IMG_433_2014.jpg" width="100%" alt="">
+      <img src="/user_assets/images/banner 2014/winners/edit-445.jpg" width="100%" alt="">
     </div>
   
     <div class="item ">
-      <img src="/user_assets/images/banner/IMG_1924_2014.jpg" width="100%" alt="">
+      <img src="/user_assets/images/banner 2014/winners/edit-351.jpg" width="100%" alt="">
     </div>
   
     <div class="item ">
-      <img src="/user_assets/images/banner/DSC_0033_2014.jpg" width="100%" alt="">
+      <img src="/user_assets/images/banner 2014/winners/edit-194.jpg" width="100%" alt="">
     </div>
   
     <div class="item ">
-      <img src="/user_assets/images/banner/DSC_3912_2014.jpg" width="100%" alt="">
+      <img src="/user_assets/images/banner 2014/winners/DSC_4189.jpg" width="100%" alt="">
     </div>
   
     <div class="item ">
-      <img src="/user_assets/images/banner/DSC_4103_2014.jpg" width="100%" alt="">
+      <img src="/user_assets/images/banner 2014/winners/DSC_4177.jpg" width="100%" alt="">
     </div>
   
     <div class="item ">
-      <img src="/user_assets/images/banner 2014/CZ_825-Gift_Photo.jpg" width="100%" alt="">
+      <img src="/user_assets/images/banner 2014/winners/DSC_0136.jpg" width="100%" alt="">
     </div>
   
     <div class="item ">
-      <img src="/user_assets/images/banner/Collage_2014.jpg" width="100%" alt="">
+      <img src="/user_assets/images/banner 2014/CZ-822-Gift-Photo.jpg" width="100%" alt="">
     </div>
   
   </div>
