--- a/faq.html
+++ b/faq.html
@@ -117,7 +117,7 @@
 </thead>
 <tbody>
 <tr>
-<td style="text-align:right">8:30 - 10 am</td>
+<td style="text-align:right">8:15 - 10 am</td>
 <td>Cars are staged at Boone Village Shopping Center, Zionsville</td>
 </tr>
 <tr>
@@ -125,7 +125,7 @@
 <td>Porsche Parade into Zionsville with Police Escort</td>
 </tr>
 <tr>
-<td style="text-align:right">10:30 am - 10:40 am</td>
+<td style="text-align:right">10:30 am - 10:50 am</td>
 <td>Cub Scout Color Guard Singing of the National Anthem and Balloon release*</td>
 </tr>
 <tr>
@@ -134,14 +134,22 @@
 </tr>
 <tr>
 <td style="text-align:right">10:45 am - 1:30 pm</td>
-<td>Kids program</td>
+<td>Kids program (located in lot just south of Brick Street Inn)</td>
+</tr>
+<tr>
+<td style="text-align:right">11:30 am</td>
+<td>Food Challenge 1 Teams for Alzheimer&#39;s</td>
 </tr>
 <tr>
 <td style="text-align:right">11:45 am - 1 pm</td>
 <td>Celebrity, Youth and Porsche Club Judging</td>
 </tr>
 <tr>
-<td style="text-align:right">1 - 1:20 pm</td>
+<td style="text-align:right">12:30 pm</td>
+<td>Food Challenge 2 Teams for Alzheimer&#39;s</td>
+</tr>
+<tr>
+<td style="text-align:right">1 - 1:30 pm</td>
 <td>Style Show on Main Street</td>
 </tr>
 <tr>
