--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -99,14 +99,13 @@
 
 <h1>Photo Galleries</h1>
 <hr>
-<br>
-<h4 id="part-1-photos-by-anita-perry">2013: Part 1 - Photos by Anita Perry</h4>
-<h4 id="part-2-photos-by-j-scott-hendricks">2013: Part 2 - Photos by J. Scott Hendricks</h4>
-<h4 id="2013-driver-portraits">2013: Driver Portraits - Photos by Anita Perry, Choreography by J. Scott Hendricks</h4>
-<br>
+<h4>2013: Part 1 - Photos by Anita Perry</h4>
+<h4>2013: Part 2 - Photos by J. Scott Hendricks</h4>
+<h4>2013: Driver Portraits - Photos by Anita Perry, Choreography by J. Scott Hendricks</h4>
 <hr>
 <h4>2014: Photos by Brad Pillow, Scott Hendricks, James Legault, Luc Ballegeer </h4>
-<br>
+<hr>
+<h4>2015: Photos by Brad Pillow, Scott Hendricks, Isabella Goodwin </h4>
 <hr>
 <br>
 
@@ -130,6 +129,8 @@ $(document).ready(function () {
 </script>
 
 
+<br>
+<br>
 <br>
 <br>
 <h1>Videos</h1>
